@@ -86,6 +86,7 @@ Changes in current version:
  o introduce evbuffer_contiguous_space() api that tells a user how much data is available in the first buffer chain
  o introduce evbuffer_reserve_space() and evbuffer_commit_space() to make processing in filters more efficient.
  o reduce system calls for getting current time by caching it.
+ o separate signal events from io events; making the code less complex.
 	
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
